--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
-#in addition to the other standard JPA properties you refered to, namely:
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
