--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,7 +2,9 @@ name: Build
 on:
   push:
     branches:
-      - master
+      - main
+      - developer
+      - release
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
