--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
     </parent>
     <groupId>br.com.dev.valber.medeiros</groupId>
     <artifactId>controle-ficancas</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.2-SNAPSHOT</version>
     <name>controle-ficancas</name>
     <description>controle-ficancas</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>valbermedeiros</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
