--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - developer
+      - develop
       - release
   pull_request:
     types: [opened, synchronize, reopened]
