--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,11 @@
 name: Build
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: 
+    - opened
+    - reopened
+    - synchronize
+    - ready_for_review
     branches:
       - main
       - develop
